--- a/public/profile/account/index.html
+++ b/public/profile/account/index.html
@@ -20,7 +20,7 @@
 <div class="mailbox"></div>
 <div class="section container main text-white">
     <div class="row">
-        <div class="col-12 col-sm-6 mt-5">
+        <div class="col-12 col-sm-6 mt-5 sticky">
             <h2 class="font-weight-bold text-secondary my-5">About you</h2>
             <div class="container mt-4" style="font-size: 16px;">
                 <div class="row">
