Added /search/genres & /search/themes + minor bug fixing.

--- a/public/book/index.html
+++ b/public/book/index.html
@@ -88,6 +88,9 @@ Loading template
                 <div class="text-gray book-genres text-capitalize mt-4">
                     Horror / Fantasy
                 </div>
+                <div class="text-gray book-theme text-capitalize">
+                    Theme
+                </div>
                 <div class="text-light text-pink book-rating mt-1">
                     <div class="ml-2 text-gray d-inline">
                         <span class="book-rating-val">0</span>/5, <span class="book-rating-qty">0</span> reviews
@@ -202,6 +205,9 @@ Loading template
                     </a>                </div>
                 <div class="text-gray book-genres mt-4 text-capitalize">
                     Horror / Fantasy
+                </div>
+                <div class="text-gray book-theme text-capitalize">
+                    Theme
                 </div>
                 <div class="text-light text-pink book-rating mt-1">
                     <div class="ml-2 text-gray d-inline">
