--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
                 </a>
             </div>
             <div class="col my-3">
-                <a href=book/?id=4289" class="text-decoration-none text-dark">
+                <a href="book/?id=4289" class="text-decoration-none text-dark">
                     <div class="book">
                         <div class="d-flex justify-content-center ">
                             <img class="image " src="https://images.gr-assets.com/books/1443190440l/26109394.jpg">
