--- a/public/profile/cart/index.html
+++ b/public/profile/cart/index.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="col-5 my-auto">
-                <button class="btn btn-primary rounded-pill float-right">Buy now</button>
+                <button class="btn btn-primary rounded-pill float-right buy-button">Buy now</button>
             </div>
         </div>
     </div>
@@ -81,7 +81,7 @@
                     </div>
                 </div>
                 <div class="d-flex flex-column h-25">
-                    <button class="btn btn-primary align-self-end mt-auto mb-4 w-100 rounded-pill" >Buy now</button>
+                    <button class="btn btn-primary align-self-end mt-auto mb-4 w-100 rounded-pill buy-button">Buy now</button>
                 </div>
             </div>
         </div>
