--- a/public/profile/account/index.html
+++ b/public/profile/account/index.html
@@ -19,8 +19,9 @@
 <div class="nav-placeholder"></div>
 <div class="mailbox"></div>
 <div class="section container main text-white">
-    <div class="row">
-        <div class="col-12 col-sm-6 mt-5 sticky">
+
+    <div class="container side-item">
+        <div class="col-12 col-sm-6 pt-5 make-me-sticky">
             <h2 class="font-weight-bold text-secondary my-5">About you</h2>
             <div class="container mt-4" style="font-size: 16px;">
                 <div class="row">
@@ -48,7 +49,9 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-sm-6 mt-5 float-right ">
+    </div>
+    <div class="container float-right">
+        <div class="col-12 col-sm-6 float-right pt-5 side-item-right">
             <h2 class="font-weight-bold text-secondary my-5">Your addresses</h2>
                 <div class="container">
                      <div id="address-container"></div>
