--- a/public/profile/cart/index.html
+++ b/public/profile/cart/index.html
@@ -21,10 +21,11 @@
         <h5 class="text-white my-auto title py-3">Shopping cart</h5>
     </div>
 </div>
-<div class="container h-100">
-    <h6 class="text-primary py-3">
+
+<div class="container h-100" >
+    <button class="border-0 bg-transparent" onclick="window.history.back();"><h6 class="text-primary py-3">
         <span class="fa fa-arrow-left"></span> back to shop
-    </h6>
+    </h6></button>
 </div>
 
 <div class="fixed-bottom vw-100 shadow d-block d-lg-none">
