--- a/public/search/theme/index.html
+++ b/public/search/theme/index.html
@@ -49,7 +49,7 @@ Loading template
         </form>
     </div>
 </div>
-<div class="section books mt-5">
+<div class="section books shadow-lg pt-5">
     <div class="container">
         <div class="books-container"></div>
     </div>
