Discover themes with links

--- a/public/discover/index.html
+++ b/public/discover/index.html
@@ -42,31 +42,28 @@
                     Themes</h3></a>
             </li>
         </ul>
-            <div class="tab-content border border-dark rounded-bobooky position-relative" id="pills-tabContent">
+            <div class="tab-content rounded-bobooky position-relative" id="pills-tabContent">
                 <div class="blurred-bg rounded-bobooky h-100 w-100 position-absolute"></div>
                 <div class="tab-pane fade show active m-5 position-relative" id="pills-genre" role="tabpanel"
                      aria-labelledby="pills-genre-tab">
 
                 </div>
-                <div class="tab-pane fade m-5 position-relative" id="pills-themes" role="tabpanel" aria-labelledby="pills-themes-tab">
+                <div class="tab-pane fade m-5 p-5 position-relative" id="pills-themes" role="tabpanel" aria-labelledby="pills-themes-tab">
                     <div class="row text">
                         <div class="col-12 col-md-6">
-                            <a href="#" class="text-white text-decoration-none">Adventure</a><br>
-                            <a href="#" class="text-white text-decoration-none">Chick lit</a><br>
-                            <a href="#" class="text-white text-decoration-none">Classics</a><br>
-                            <a href="#" class="text-white text-decoration-none">Distopia</a><br>
-                            <a href="#" class="text-white text-decoration-none">Epic Fantasy</a><br>
-                            <a href="#" class="text-white text-decoration-none">Fear</a><br>
-                            <a href="#" class="text-white text-decoration-none">Historical</a><br>
+                            <a href="http://localhost/search/theme/?theme=Adventure" class="text-white text-decoration-none">Adventure</a><br>
+                            <a href="http://localhost/search/theme/?theme=Chick-Lit" class="text-white text-decoration-none">Chick lit</a><br>
+                            <a href="http://localhost/search/theme/?theme=Classics" class="text-white text-decoration-none">Classics</a><br>
+                            <a href="http://localhost/search/theme/?theme=Dystopia" class="text-white text-decoration-none">Dystopia</a><br>
+                            <a href="http://localhost/search/theme/?theme=Epic-Fantasy" class="text-white text-decoration-none">Epic Fantasy</a><br>
+                            <a href="http://localhost/search/theme/?theme=Fear" class="text-white text-decoration-none">Fear</a><br>
                         </div>
                         <div class="col-12 col-md-6">
-                            <a href="#" class="text-white text-decoration-none">Adventure</a><br>
-                            <a href="#" class="text-white text-decoration-none">Chick lit</a><br>
-                            <a href="#" class="text-white text-decoration-none">Classics</a><br>
-                            <a href="#" class="text-white text-decoration-none">Distopia</a><br>
-                            <a href="#" class="text-white text-decoration-none">Epic Fantasy</a><br>
-                            <a href="#" class="text-white text-decoration-none">Fear</a><br>
-                            <a href="#" class="text-white text-decoration-none">Historical</a><br>
+                            <a href="http://localhost/search/theme/?theme=Historical" class="text-white text-decoration-none">Historical</a><br>
+                            <a href="http://localhost/search/theme/?theme=Humor" class="text-white text-decoration-none">Humor</a><br>
+                            <a href="http://localhost/search/theme/?theme=Magic" class="text-white text-decoration-none">Magic</a><br>
+                            <a href="http://localhost/search/theme/?theme=Mistery" class="text-white text-decoration-none">Mistery</a><br>
+                            <a href="http://localhost/search/theme/?theme=Mythology" class="text-white text-decoration-none">Mythology</a><br>
                         </div>
                     </div>
                 </div>
