--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-sm-auto p-0">
-                    <a href="#" class="h5 text-decoration-none text-pink"> Show more</a>
+                    <a href="/search/?q=&orderby=year&genre=default&theme=default&page=0" class="h5 text-decoration-none text-pink"> Show more</a>
                 </div>
             </div>
         </div>
