--- a/public/index.html
+++ b/public/index.html
@@ -243,29 +243,29 @@
         <h3>How do you feel today?</h3>
         <div class="row mt-5">
             <div class="col-12 col-sm-4 text-center px-3">
-                <a href="http://localhost/search/theme/?theme=Chick+lit"
+                <a href="search/?q=&orderby=default&genre=default&theme=Chick+lit"
                    class="btn btn-lg btn-danger rounded-pill font-weight-bold text-white w-100 my-2">Romantic</a>
             </div>
             <div class="col-12 col-sm-4 text-center px-3">
-                <a href="http://localhost/search/theme/?theme=Mistery"
+                <a href="search/?q=&orderby=default&genre=default&theme=Mystery"
                    class="btn btn-lg btn-warning rounded-pill text-white font-weight-bold w-100 my-2">Detective</a>
             </div>
             <div class="col-12 col-sm-4 text-center px-3">
-                <a href="http://localhost/search/theme/?theme=Fear"
+                <a href="search/?q=&orderby=default&genre=default&theme=Fear"
                    class="btn btn-lg btn-secondary rounded-pill font-weight-bold text-white w-100 my-2">Brave</a>
             </div>
         </div>
         <div class="row">
             <div class="col-12 col-sm-4 text-center px-3">
-                <a href="http://localhost/search/theme/?theme=Adventure"
+                <a href="search/?q=&orderby=default&genre=default&theme=Adventure"
                    class="btn btn-lg btn-purple rounded-pill font-weight-bold w-100 my-2">Hero</a>
             </div>
             <div class="col-12 col-sm-4 text-center px-3">
-                <a href="http://localhost/search/theme/?theme=Classics"
+                <a href="search/?q=&orderby=default&genre=default&theme=Classics"
                    class="btn btn-lg btn-pink rounded-pill font-weight-bold w-100 my-2">Sapient</a>
             </div>
             <div class="col-12 col-sm-4 text-center px-3">
-                <a href="http://localhost/search/theme/?theme=Magic"
+                <a href="search/?q=&orderby=default&genre=default&theme=Magic"
                    class="btn btn-lg btn-primary rounded-pill font-weight-bold w-100 my-2">Magic</a>
             </div>
         </div>
