Working on event search

--- a/public/search/event/index.html
+++ b/public/search/event/index.html
@@ -27,6 +27,33 @@
     </div>
 </div>
 
+<div class="section search mt-5">
+    <div class="container">
+        <form class="search-form">
+            <div class="row">
+                <div class="col-12 col-xl-6">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-4 text-center align-middle">
+                                <h4>Events from</h4>
+                            </div>
+                            <div class="col-8">
+                                <input type="date" name="date" value=""
+                                      class="form-control form-control-lg rounded-pill datepicker">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-xl-6 mt-4 mt-xl-0">
+                    <input type="search" name="q" value="" class="form-control form-control-lg rounded-pill search-bar"
+                           placeholder="Search..">
+                </div>
+            </div>
+            <button type="submit" class="d-none"></button>
+        </form>
+    </div>
+</div>
+
 <div class="container events">
     <div class="row">
         <div class="col events-container mt-5">
