Search event style

--- a/public/search/event/index.html
+++ b/public/search/event/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Shopping Cart</title>
+    <title>Search Events</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
@@ -34,10 +34,10 @@
                 <div class="col-12 col-xl-6">
                     <div class="container">
                         <div class="row">
-                            <div class="col-4 text-center align-middle">
-                                <h4>Events from</h4>
+                            <div class="col-auto my-auto p-0 mr-3">
+                                <h5>Events from</h5>
                             </div>
-                            <div class="col-8">
+                            <div class="col p-0">
                                 <input type="date" name="date" value=""
                                       class="form-control form-control-lg rounded-pill datepicker">
                             </div>
@@ -46,7 +46,7 @@
                 </div>
                 <div class="col-12 col-xl-6 mt-4 mt-xl-0">
                     <input type="search" name="q" value="" class="form-control form-control-lg rounded-pill search-bar"
-                           placeholder="Search..">
+                           placeholder="Search...">
                 </div>
             </div>
             <button type="submit" class="d-none"></button>
@@ -55,8 +55,8 @@
 </div>
 
 <div class="container events">
-    <div class="row">
-        <div class="col events-container mt-5">
+    <div class="row mt-5">
+        <div class="col events-container p-0">
             <div class="container event-per-day-container">
             </div>
         </div>
