Search event style

--- a/public/search/event/index.html
+++ b/public/search/event/index.html
@@ -29,7 +29,7 @@
 
 <div class="section search mt-5">
     <div class="container">
-        <form class="search-form">
+        <form class="search-form ">
             <div class="row">
                 <div class="col-12 col-xl-6">
                     <div class="container">
@@ -39,13 +39,13 @@
                             </div>
                             <div class="col p-0">
                                 <input type="date" name="date" value=""
-                                      class="form-control form-control-lg rounded-pill datepicker">
+                                      class="form-control no-glow bobooky-purple form-control-lg rounded-pill datepicker">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-xl-6 mt-4 mt-xl-0">
-                    <input type="search" name="q" value="" class="form-control form-control-lg rounded-pill search-bar"
+                    <input type="search" name="q" value="" class="form-control no-glow bobooky-purple form-control-lg rounded-pill search-bar"
                            placeholder="Search...">
                 </div>
             </div>
