--- a/public/search/index.html
+++ b/public/search/index.html
@@ -43,12 +43,12 @@ Loading template
         <form class="search-form">
             <div class="row">
                 <div class="col-12 col-xl-6">
-                    <input type="search" name="q" value="" class="form-control form-control-lg rounded-pill search-bar"
+                    <input type="search" name="q" value="" class="form-control no-glow bobooky-pink form-control-lg rounded-pill search-bar"
                            placeholder="Search..">
                 </div>
                 <div class="col-12 col-xl-6 d-flex justify-content-between mt-3 mt-xl-0">
                     <select name="orderby"
-                            class="text-capitalize form-control custom-select custom-select-lg bg-dark rounded-pill text-white mr-3 filter orderby">
+                            class="text-capitalize form-control no-glow custom-select custom-select-lg bg-dark rounded-pill text-white mr-3 filter orderby">
                         <option selected value="default">order by</option>
                         <option value="price">price</option>
                         <option value="author">author</option>
@@ -93,15 +93,15 @@ Loading template
     <div class="container text-pink">
         <div class="row">
             <div class="col-6">
-                <button class="previous btn btn-outline-pink" type="button">
-                    <i class="fa fa-arrow-circle-left"></i>
+                <button class="previous btn btn-outline-pink rounded-pill" type="button">
+                    <i class="fa fa-angle-left"></i>
                     <span class="ml-2">previous</span>
                 </button>
             </div>
             <div class="col-6 d-flex justify-content-end">
-                <button class="next btn btn-outline-pink" type="button">
+                <button class="next btn btn-outline-pink rounded-pill" type="button">
                     <span class="mr-2">next</span>
-                    <i class="fa fa-arrow-circle-right"></i>
+                    <i class="fa fa-angle-right"></i>
                 </button>
             </div>
         </div>
