--- a/public/search/index.html
+++ b/public/search/index.html
@@ -44,7 +44,7 @@ Loading template
             <div class="row">
                 <div class="col-12 col-xl-6">
                     <input type="search" name="q" value="" class="form-control no-glow bobooky-pink form-control-lg rounded-pill search-bar"
-                           placeholder="Search..">
+                           placeholder="Search more than 700 books..">
                 </div>
                 <div class="col-12 col-xl-6 d-flex justify-content-between mt-3 mt-xl-0">
                     <select name="orderby"
