--- a/public/search/theme/index.html
+++ b/public/search/theme/index.html
@@ -39,7 +39,7 @@ Loading template
     </div>
 </nav>
 
-<div class="container-fluid bg-warning theme-ribbon">
+<div class="container-fluid theme-ribbon">
     <div class="container text-white py-5">
         <h2 class="name text-capitalize">theme name</h2>
         <form class="search-form">
