--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,12 @@
 <body>
 <div class="nav-placeholder"></div>
 
-<div class="section search-section d-flex justify-content-center min-vh-100 bg-dark flex-column" id="top">
+<div class="section search-section d-flex justify-content-center bg-dark flex-column" id="top">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 col-md-10 text-white">
                 <h3>What are you looking for?</h3>
-                <form action="/search" method="get">
+                <form action="/search" method="get" id="search-form">
                     <div class="form-group border-white mt-3 search-bar">
                         <div class="input-group">
                             <input type="text" name="q" class="search-query form-control pl-4 text-light border-right-0"
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-sm-auto p-0">
-                    <a href="/search/?q=&orderby=year&genre=default&theme=default&page=0" class="h5 text-decoration-none text-pink"> Show more</a>
+                    <a href="/search/more/?keyword=latest" class="h5 text-decoration-none text-pink"> Show more</a>
                 </div>
             </div>
         </div>
@@ -147,11 +147,11 @@
             <div class="row align-items-baseline">
                 <div class="col-12 col-sm-auto">
                     <div class="row">
-                        <h3>Bestseller</h3><h3 class="d-none d-sm-block px-2">|</h3>
+                        <h3>Bestsellers</h3><h3 class="d-none d-sm-block px-2">|</h3>
                     </div>
                 </div>
                 <div class="col-12 col-sm-auto p-0">
-                    <a href="#" class="h5 text-decoration-none text-pink"> Show more</a>
+                    <a href="/search/more/?keyword=bestsellers" class="h5 text-decoration-none text-pink"> Show more</a>
                 </div>
             </div>
         </div>
@@ -283,7 +283,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-sm-auto p-0">
-                    <a href="#" class="h5 text-decoration-none text-pink"> Show more</a>
+                    <a href="/search/more/?keyword=favourites" class="h5 text-decoration-none text-pink"> Show more</a>
                 </div>
             </div>
         </div>
