--- a/public/search/more/index.html
+++ b/public/search/more/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Genre</title>
+    <title>More</title>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="/lib/scss/bobooky-theme.css">
     <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
@@ -23,7 +23,7 @@ Loading template
     <div class="container text-center">
         <img src="/assets/images/loading.gif" alt="Loading" style="width:30%"><br>
         <img class="mt-5" src="/assets/logo_white.png" alt="Bobooky">
-        <h6 class="text-white mt-5">Searching more than 700 books..</h6>
+        <h6 class="text-white mt-5">Don't worry, it won't take long..</h6>
     </div>
 </div>
 
@@ -39,17 +39,35 @@ Loading template
     </div>
 </nav>
 
-<div class="container-fluid genre">
+
+<div class="container-fluid keyword bg-pink">
     <div class="container text-white py-5">
-        <h2 class="name text-capitalize">Genre name</h2>
         <form class="search-form">
-            <input type="text" name="genre" class="d-none genre" value="">
+            <div class="row">
+                <div class="col-12 col-md px-0">
+                    <h2 class="name text-capitalize"></h2>
+
+                </div>
+                <div class="col-12 col-md-auto px-0">
+                    <select name="orderby"
+                            class="text-capitalize form-control no-glow custom-select custom-select-lg bg-dark rounded-pill text-white filter orderby">
+                        <option selected value="default">order by</option>
+                        <option value="price">price</option>
+                        <option value="author">author</option>
+                        <option value="name">name</option>
+                        <option value="year">year</option>
+
+                    </select>
+                </div>
+            </div>
+            <input type="text" name="keyword" class="d-none keyword" value="">
             <input type="text" name="page" class="d-none page" value="0">
             <button type="submit" class="d-none"></button>
         </form>
     </div>
 </div>
-<div class="section books shadow-lg pt-5">
+
+<div class="section books pt-5">
     <div class="container">
         <div class="books-container"></div>
     </div>
