Add search for events

--- a/public/search/event/index.html
+++ b/public/search/event/index.html
@@ -18,7 +18,7 @@
 <div class="nav-placeholder"></div>
 <div class="container-fluid bg-primary px-0">
     <div class="container h-100">
-        <h5 class="text-white my-auto title py-3">Fucking/Path/To/Events</h5>
+        <h5 class="text-white my-auto title py-3">*******/Path/To/Events</h5>
     </div>
 </div>
 <div class="container-fluid bg-purple px-0">
@@ -29,9 +29,9 @@
 
 <div class="section search mt-5">
     <div class="container">
-        <form class="search-form ">
+        <form class="search-form">
             <div class="row">
-                <div class="col-12 col-xl-6">
+                <div class="col-12 col-xl-5">
                     <div class="container">
                         <div class="row">
                             <div class="col-auto my-auto p-0 mr-3">
@@ -44,9 +44,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-xl-6 mt-4 mt-xl-0">
+                <div class="col-10 col-xl-5 mt-4 mt-xl-0">
                     <input type="search" name="q" value="" class="form-control no-glow bobooky-purple form-control-lg rounded-pill search-bar"
                            placeholder="Search...">
+                </div>
+                <div class="col">
+                    <button type="submit" class="btn btn-primary btn-circle-bobooky">Search</button>
                 </div>
             </div>
             <button type="submit" class="d-none"></button>
