--- a/public/search/event/index.html
+++ b/public/search/event/index.html
@@ -18,7 +18,7 @@
 <div class="nav-placeholder"></div>
 <div class="container-fluid bg-primary px-0">
     <div class="container h-100">
-        <h5 class="text-white my-auto title py-3">*******/Path/To/Events</h5>
+        <h5 class="text-white my-auto title py-3">/Path/To/Events</h5>
     </div>
 </div>
 <div class="container-fluid bg-purple px-0">
@@ -31,28 +31,29 @@
     <div class="container">
         <form class="search-form">
             <div class="row">
-                <div class="col-12 col-xl-5">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-auto my-auto p-0 mr-3">
-                                <h5>Events from</h5>
-                            </div>
-                            <div class="col p-0">
-                                <input type="date" name="date" value=""
-                                      class="form-control no-glow bobooky-purple form-control-lg rounded-pill datepicker">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-10 col-xl-5 mt-4 mt-xl-0">
-                    <input type="search" name="q" value="" class="form-control no-glow bobooky-purple form-control-lg rounded-pill search-bar"
-                           placeholder="Search...">
-                </div>
                 <div class="col">
-                    <button type="submit" class="btn btn-primary btn-circle-bobooky">Search</button>
+                    <h5>Events from</h5>
                 </div>
             </div>
-            <button type="submit" class="d-none"></button>
+            <div class="row mt-3">
+                <div class="col-12 col-md-4">
+                    <input type="date" name="date" value=""
+                           class="form-control no-glow  border border-dark bobooky-purple form-control-lg rounded-pill datepicker">
+                </div>
+                <div class="col-12 mt-3 mt-md-0 col-md">
+                    <div class="input-group">
+                        <input type="text" name="q" class="border border-dark form-control form-control-lg rounded-bobooky" placeholder="Search more than 700 books">
+                        <div class="input-group-append ">
+                            <button class="btn rounded-bobooky no-glow border border-dark btn-lg" type="button">
+                                <i class="fa fa-search text-dark"></i>
+                            </button>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+            <input type="submit" class="d-none">
         </form>
     </div>
 </div>
