Fix Event search

--- a/public/search/event/index.html
+++ b/public/search/event/index.html
@@ -44,7 +44,7 @@
                     <div class="input-group">
                         <input type="text" name="q" class="border border-dark form-control form-control-lg rounded-bobooky" placeholder="Search more than 700 books">
                         <div class="input-group-append ">
-                            <button class="btn rounded-bobooky no-glow border border-dark btn-lg" type="button">
+                            <button class="btn rounded-bobooky no-glow border border-dark btn-lg search-button" type="button">
                                 <i class="fa fa-search text-dark"></i>
                             </button>
                         </div>
