--- a/public/index.html
+++ b/public/index.html
@@ -242,31 +242,31 @@
     <div class="container py-5">
         <h3>How do you feel today?</h3>
         <div class="row mt-5">
-            <div class="col-12 col-sm-4 text-center px-3">
-                <a href="http://localhost/search/theme/?theme=Chick+lit"
-                   class="btn btn-lg btn-danger rounded-pill font-weight-bold text-white w-100 my-2">Romantic</a>
+            <div class="col-12 col-sm-4 text-center btn-gradient px-3">
+                <a href="/search/theme/?theme=Chick Lit"
+                   class="btn btn-lg gradient-danger rounded-pill font-weight-bold text-white w-100 my-2">Romantic</a>
             </div>
-            <div class="col-12 col-sm-4 text-center px-3">
-                <a href="http://localhost/search/theme/?theme=Mistery"
-                   class="btn btn-lg btn-warning rounded-pill text-white font-weight-bold w-100 my-2">Detective</a>
+            <div class="col-12 col-sm-4 text-center btn-gradient px-3">
+                <a href="/search/theme/?theme=Mystery"
+                   class="btn btn-lg gradient-warning rounded-pill text-white font-weight-bold w-100 my-2">Detective</a>
             </div>
-            <div class="col-12 col-sm-4 text-center px-3">
-                <a href="http://localhost/search/theme/?theme=Fear"
-                   class="btn btn-lg btn-secondary rounded-pill font-weight-bold text-white w-100 my-2">Brave</a>
+            <div class="col-12 col-sm-4 text-center btn-gradient px-3">
+                <a href="/search/theme/?theme=Classic"
+                   class="btn btn-lg gradient-pink rounded-pill font-weight-bold text-white w-100 my-2">Sapient</a>
             </div>
         </div>
         <div class="row">
-            <div class="col-12 col-sm-4 text-center px-3">
-                <a href="http://localhost/search/theme/?theme=Adventure"
-                   class="btn btn-lg btn-purple rounded-pill font-weight-bold w-100 my-2">Hero</a>
+            <div class="col-12 col-sm-4 text-center btn-gradient px-3">
+                <a href="/search/theme/?theme=Fear"
+                   class="btn btn-lg gradient-purple rounded-pill font-weight-bold text-white w-100 my-2">Brave</a>
             </div>
-            <div class="col-12 col-sm-4 text-center px-3">
-                <a href="http://localhost/search/theme/?theme=Classics"
-                   class="btn btn-lg btn-pink rounded-pill font-weight-bold w-100 my-2">Sapient</a>
+            <div class="col-12 col-sm-4 text-center btn-gradient px-3">
+                <a href="/search/theme/?theme=Adventure"
+                   class="btn btn-lg gradient-secondary rounded-pill font-weight-bold text-white w-100 my-2">Hero</a>
             </div>
-            <div class="col-12 col-sm-4 text-center px-3">
-                <a href="http://localhost/search/theme/?theme=Magic"
-                   class="btn btn-lg btn-primary rounded-pill font-weight-bold w-100 my-2">Magic</a>
+            <div class="col-12 col-sm-4 text-center btn-gradient px-3">
+                <a href="/search/theme/?theme=Magic"
+                   class="btn btn-lg gradient-primary rounded-pill font-weight-bold text-white w-100 my-2">Magic</a>
             </div>
         </div>
     </div>
