--- a/public/search/event/index.html
+++ b/public/search/event/index.html
@@ -16,11 +16,8 @@
 
 <body>
 <div class="nav-placeholder"></div>
-<div class="container-fluid bg-primary px-0">
-    <div class="container h-100">
-        <h5 class="text-white my-auto title py-3">/Path/To/Events</h5>
-    </div>
-</div>
+<div class="breadcrumb-placeholder"></div>
+
 <div class="container-fluid bg-purple px-0">
     <div class="container h-100">
         <h3 class="text-white my-auto title py-3">Events</h3>
